syntax = "proto3";
option java_package = "com.alipay.sofa.registry.common.model.client.pb";
option java_multiple_files = true;
option go_package = "proto";

import "DataBoxesPb.proto";

message MultiSegmentDataPb {

  string segment = 1;
  bytes zipData = 2;
  map<string, DataBoxesPb> unzipData = 3;
  string encoding = 4;
  int64 version = 5;
  map<string, int32> pushDataCount = 6;
}
